--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
 }
-p{
-
+h3{
+   font-size: larger;
   font-family: 'Work Sans', sans-serif;  
 color: #fff;
 font-size: 17px;
