--- a/style.css
+++ b/style.css
@@ -117,4 +117,10 @@ input[type="submit"] {
   padding: 7px;
 }
 
+.html{
+background: url(./image/CAP2-min.png) no-repeat center center fixed;
+ -webkit-background-size: cover; 
+ -moz-background-size: cover; 
+ -o-background-size: cover; 
+ background-size: cover; }
 
