--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: bottom 2%;
   }
-  
-  
+ 
   nav li {
     display: inline-block;
     margin-right: 10px;
@@ -27,8 +27,8 @@ justify-content:auto;
 }
 .noire{
 background-color: black;
-width: 1200vh;
-height: 125vh;
+width: 1100vh;
+height: 120vh;
 margin-top: auto;
 justif-content: auto;
 align-items: auto;
@@ -122,5 +122,13 @@ background: url(./image/CAP2-min.png) no-repeat center center fixed;
  -webkit-background-size: cover; 
  -moz-background-size: cover; 
  -o-background-size: cover; 
- background-size: cover; }
-
+ background-size: cover; 
+}
+body{
+  margin: 0%;
+}
+.rose{
+  margin-left: 35%;
+  margin-bottom: -10%;
+  margin-top: -15%;
+}
